# wp_face

./: CMakeLists.txt  README.md  arcface.cpp  arcface.h  cnn.cpp  cnn.h  cvFace.cpp  cvFace.h  face.cpp  face.h  main.cpp  seeta.cpp  seeta.h  util.cpp  util.h
arcface/inc/: arcsoft_face_sdk.h
seeta/includes/seeta/: CVStatisticsWindow.h  QualityAssessor.h  QualityOfIntegrity.h  Struct_cv.h  platform.h
